# numeron

./: .gitignore  README.md  pnpm-lock.yaml
.github/workflows/: pages.yml  release-tauri.yml  release.yml
apps/desktop/: electron-builder.yml
apps/tauri/: index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/tauri/src/: main.tsx
apps/tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/tauri/src-tauri/icons/: icon.icns
apps/tauri/src-tauri/src/: lib.rs  main.rs
apps/web/: vite.config.ts
apps/web/src/: App.tsx  main.tsx  store.ts
apps/web/src/components/: LoadProfileOverlay.tsx  Nav.tsx  NumberDisplay.tsx  ResonanceScope.tsx  ThreeLensToggle.tsx
apps/web/src/hooks/: useSavedProfiles.ts
apps/web/src/pages/: Compatibility.tsx  Dashboard.tsx  Profile.tsx  Reading.tsx
landing/: index.html
landing/src/: decode.js  downloads.js  style.css
