[package]
name = "numeron-tauri"
version = "0.1.3"
description = "NUMERON — The Ancient Science of Numbers, Decoded."
license = "MIT"
edition = "2021"

[lib]
name = "numeron_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
serde_json = "1"
